Fazendo o cruzamento de médias móveis (só falta plotar)

--- a/ma_crossover.ipynb
+++ b/ma_crossover.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
        "[3561 rows x 7 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,16 +242,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Função do cruzamento de médias móveis\n",
+    "def ma_crossover(long_average, short_average):\n",
+    "    # Matriz com as duas médias lado a lado\n",
+    "    aux_matrix = np.hstack((long_average.values.reshape(-1, 1), short_average.values[short_average.size - long_average.size:].reshape(-1, 1)))\n",
+    "    \n",
+    "    # Vetor que analisa quando a média curta é maior que a longa\n",
+    "    bool_vector = aux_matrix[:, 1] > aux_matrix[:, 0]\n",
+    "    \n",
+    "    # Analisando quando a média curta cruza a longa\n",
+    "    bool_matrix = np.zeros((bool_vector.size + 1, 2))\n",
+    "    bool_matrix[1:, 0] = bool_vector\n",
+    "    bool_matrix[:-1, 1] = bool_vector\n",
+    "    evaluation = bool_matrix[1:-1, 1] - bool_matrix[1:-1, 0]\n",
+    "    evaluation = evaluation.astype(str)\n",
+    "\n",
+    "    # Rotulando quando comprar, vender e manter\n",
+    "    evaluation[evaluation == \"0.0\"] = \"keep\"\n",
+    "    evaluation[evaluation == \"1.0\"] = \"buy\"\n",
+    "    evaluation[evaluation == \"-1.0\"] = \"sell\"\n",
+    "\n",
+    "    # Adicionando a data à série\n",
+    "    dated_evaluations = pd.Series(evaluation, long_average.index[1:])\n",
+    "\n",
+    "    return dated_evaluations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculando as avaliações\n",
+    "evaluations = ma_crossover(long_average, short_average)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2041bfb98d0>"
+       "<matplotlib.legend.Legend at 0x2041f4238b0>"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     },
