Adicionando backtest e strategy

--- a/ma_crossover.ipynb
+++ b/ma_crossover.ipynb
@@ -211,6 +211,7 @@
    "outputs": [],
    "source": [
     "# Função para calcular a média móvel exponencial dos dados\n",
+    "# TODO: Não existe date column, a ideia que é os indices sejam os dias e não tenha uma coluna só pra data. \n",
     "def moving_average(data_column, date_column, size):\n",
     "    # Número de dados\n",
     "    n_of_data = data_column.size\n",
@@ -261,6 +262,7 @@
     "    evaluation = bool_matrix[1:-1, 1] - bool_matrix[1:-1, 0]\n",
     "    evaluation = evaluation.astype(str)\n",
     "\n",
+    "    # TODO: Mudar o 0 de keep para zerar a posição, vender voce fica negativo\n",
     "    # Rotulando quando comprar, vender e manter\n",
     "    evaluation[evaluation == \"0.0\"] = \"keep\"\n",
     "    evaluation[evaluation == \"1.0\"] = \"buy\"\n",
@@ -319,6 +321,13 @@
     "plt.scatter(sells, tsla_data[tsla_data[\"Date\"].isin(sells)][\"Adj Close\"], color = \"red\", label = \"sell\")\n",
     "plt.legend()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -337,7 +346,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
