--- a/testes/ma_crossover.ipynb
+++ b/testes/ma_crossover.ipynb
@@ -162,7 +162,7 @@
     }
    ],
    "source": [
-    "from strategy import MA_crossover\n",
+    "from testes.strategy import MA_crossover\n",
     "\n",
     "teste = MA_crossover(tsla_data, 8, 21)\n",
     "teste.run()"
@@ -185,7 +185,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
