adicionando função kauan

--- a/testes/test_backtesting.ipynb
+++ b/testes/test_backtesting.ipynb
@@ -85,8 +85,8 @@
     "\n",
     "        # Verifica se a média móvel de longo prazo cruzou acima da média móvel de curto prazo    \n",
     "        elif crossover(self.long_ma, self.short_ma):\n",
-    "            self.position.close() # Fecha a posição atual\n",
-    "            self.sell() # Realiza uma ordem de venda"
+    "            self.position.close() \n",
+    "            self.sell() "
    ]
   },
   {
