adicionando a pasta utils

--- a/modern_patterns.ipynb
+++ b/modern_patterns.ipynb
@@ -36,8 +36,8 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "import tradingUtils as ut\n",
-    "from tradingUtils import OurStrategy\n",
+    "import utils.tradingUtils as ut\n",
+    "from utils.tradingUtils import OurStrategy\n",
     "import matplotlib.pyplot as plt\n",
     "import backtesting\n",
     "from backtesting import Strategy, Backtest\n",
