--- a/final_model.ipynb
+++ b/final_model.ipynb
@@ -2,23 +2,113 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.neural_network import MLPClassifier\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import classification_report\n",
     "import pandas as pd\n",
-    "import numpy as np\n"
+    "import numpy as np\n",
+    "from classic_patterns import ml_tsla_data\n",
+    "from labeling import label_tsla_data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Juntando os dados\n",
+    "Pegando os dados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ml_tsla_data = np.array(ml_tsla_data)  \n",
+    "label_tsla_data = np.array(label_tsla_data).ravel()  \n",
+    "\n",
+    "# Divide os dados em conjuntos de treinamento e teste\n",
+    "X_train, X_test, y_train, y_test = train_test_split(ml_tsla_data, label_tsla_data, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fazendo a rede neural"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.00      0.00      0.00         9\n",
+      "           1       0.00      0.00      0.00       357\n",
+      "          -1       0.49      0.99      0.65       347\n",
+      "\n",
+      "    accuracy                           0.48       713\n",
+      "   macro avg       0.16      0.33      0.22       713\n",
+      "weighted avg       0.24      0.48      0.32       713\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\kauan\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\metrics\\_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "C:\\Users\\kauan\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\metrics\\_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "C:\\Users\\kauan\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\metrics\\_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Cria a rede neural\n",
+    "mlp = MLPClassifier(hidden_layer_sizes=(100,), activation='logistic', solver='adam', max_iter=500, random_state=42)\n",
+    "\n",
+    "# Treina a rede neural\n",
+    "mlp.fit(X_train, y_train)\n",
+    "\n",
+    "# Faz previsões\n",
+    "y_pred = mlp.predict(X_test)\n",
+    "\n",
+    "# Avalia o modelo\n",
+    "print(classification_report(y_test, y_pred, target_names=[\"0\", \"1\", \"-1\"]))\n"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
