adiiconando alguns indicadores

--- a/indicadores.ipynb
+++ b/indicadores.ipynb
@@ -23,19 +23,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: backtesting in c:\\users\\kauan\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (0.3.3)\n",
+      "Requirement already satisfied: numpy>=1.17.0 in c:\\users\\kauan\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from backtesting) (1.26.4)\n",
+      "Requirement already satisfied: pandas!=0.25.0,>=0.25.0 in c:\\users\\kauan\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from backtesting) (2.2.2)\n",
+      "Requirement already satisfied: bokeh>=1.4.0 in c:\\users\\kauan\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from backtesting) (3.5.2)\n",
+      "Requirement already satisfied: Jinja2>=2.9 in c:\\users\\kauan\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from bokeh>=1.4.0->backtesting) (3.1.4)\n",
+      "Requirement already satisfied: contourpy>=1.2 in c:\\users\\kauan\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from bokeh>=1.4.0->backtesting) (1.2.1)\n",
+      "Requirement already satisfied: packaging>=16.8 in c:\\users\\kauan\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from bokeh>=1.4.0->backtesting) (24.1)\n",
+      "Requirement already satisfied: pillow>=7.1.0 in c:\\users\\kauan\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from bokeh>=1.4.0->backtesting) (10.4.0)\n",
+      "Requirement already satisfied: PyYAML>=3.10 in c:\\users\\kauan\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from bokeh>=1.4.0->backtesting) (6.0.1)\n",
+      "Requirement already satisfied: tornado>=6.2 in c:\\users\\kauan\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from bokeh>=1.4.0->backtesting) (6.4.1)\n",
+      "Requirement already satisfied: xyzservices>=2021.09.1 in c:\\users\\kauan\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from bokeh>=1.4.0->backtesting) (2024.9.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\kauan\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from pandas!=0.25.0,>=0.25.0->backtesting) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\kauan\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from pandas!=0.25.0,>=0.25.0->backtesting) (2024.1)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\kauan\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from pandas!=0.25.0,>=0.25.0->backtesting) (2024.1)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in c:\\users\\kauan\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from Jinja2>=2.9->bokeh>=1.4.0->backtesting) (2.1.5)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\kauan\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from python-dateutil>=2.8.2->pandas!=0.25.0,>=0.25.0->backtesting) (1.16.0)\n"
+     ]
+    }
+   ],
    "source": [
-    "from tradingUtils import *\n",
+    "!pip install backtesting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'backtesting'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[14], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtradingUtils\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mta\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\kauan\\OneDrive - Fundacao Getulio Vargas - FGV\\FGV\\Matérias\\Quarto Semestre\\Field Project\\field_project_cartesius\\tradingUtils.py:2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mbacktesting\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Strategy, Backtest\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# Carregando os dados e ajustando o datetime\u001b[39;00m\n\u001b[0;32m      5\u001b[0m tsla_data \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdata/TSLA.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'backtesting'"
+     ]
+    }
+   ],
+   "source": [
     "import numpy as numpy\n",
     "import pandas as pd\n",
+    "from tradingUtils import *\n",
     "import ta"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +272,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[50], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m data \u001b[38;5;241m=\u001b[39m tsla_data\u001b[38;5;241m.\u001b[39mcopy()\n\u001b[1;32m----> 2\u001b[0m \u001b[43mrun_signal_policy\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mADX\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mADX\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mexec_back\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[0;32m      4\u001b[0m data\n",
+      "Cell \u001b[1;32mIn[59], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m data \u001b[38;5;241m=\u001b[39m tsla_data\u001b[38;5;241m.\u001b[39mcopy()\n\u001b[1;32m----> 2\u001b[0m \u001b[43mrun_signal_policy\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mADX\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mADX\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mexec_back\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[0;32m      4\u001b[0m data\n",
       "\u001b[1;31mTypeError\u001b[0m: run_signal_policy() got an unexpected keyword argument 'exec_back'"
      ]
     }
